--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
@@ -22,6 +24,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-intersection-observer": "^8.26.2",
     "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
