--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-intersection-observer": "^8.26.2",
-    "react-visibility-sensor": "^5.1.1"
+    "react-intersection-observer": "^8.26.2"
   },
   "devDependencies": {
     "prettier": "2.0.5"
