--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Steve's portfolio",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Steve Chan <danyangvii@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
@@ -25,7 +25,11 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-intersection-observer": "^8.26.2"
+    "react-images": "^1.2.0-beta.7",
+    "react-intersection-observer": "^8.26.2",
+    "react-justified-grid": "^1.0.0",
+    "react-photo-gallery": "^8.0.0",
+    "react-type-animation": "^2.1.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
